fix squashed game view when game drawer is open

--- a/app/globals.css
+++ b/app/globals.css
@@ -210,6 +210,7 @@ header>section>nav {
 }
 
 .game_wrapper.open {
+  margin-bottom: 20px;
   max-height: 400px;
 }
 
